Fix chart overflow

--- a/src/app/components/finances/finances.component.css
+++ b/src/app/components/finances/finances.component.css
@@ -1,7 +1,12 @@
+:host .row {
+  margin-right: 0;
+  margin-left: 0;
+}
+
 .chart-container {
   width: 100%;
-  max-width: 650px;
-  height: 300px;
+  /*max-width: 650px;*/
+  /*height: 300px;*/
   margin: 20px auto;
   display: flex;
   justify-content: center;
@@ -13,7 +18,7 @@ canvas {
 }
 
 .small-chart {
-  max-width: 500px;
-  height: 250px;
+  /*max-width: 500px;*/
+  /*height: 250px;*/
   margin: 0 auto;
 }
